<resources>
    <string name="app_name">Trello</string>
    <string name="image_contentDescription">Intro Screen Image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="update">UPDATE</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">email and password, to login.</string>

    <string name="please_wait">Please wait</string>
    <string name="please_click_back_again_to_exit">Please click back button again to exit</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile_number">Mobile number</string>
    <string name="board_name">Board name</string>
    <string name="create">CREATE</string>
    <string name="create_board">Create board</string>
</resources>