<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.BoardCreationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_board"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_create_board_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/create_board"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/board_image_create"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_marginStart="@dimen/profile_image_marginStartEnd"
            android:layout_marginTop="@dimen/profile_image_margin_top"
            android:layout_marginEnd="@dimen/profile_image_marginStartEnd"
            android:layout_marginBottom="@dimen/profile_image_marginBottom"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/ic_user_place_holder"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="@dimen/nav_image_circular_border_width" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_board_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_name"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>